@@ -23,6 +23,11 @@
 package com.exedio.cops;
 
 import java.io.IOException;
+import java.util.Collection;
+import java.util.Date;
+import java.util.HashMap;
+import java.util.HashSet;
+import java.util.concurrent.Callable;
 
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
@@ -36,6 +41,11 @@ public abstract class PropertiesServlet extends CopsServlet
 	static final Resource stylesheet = new Resource("properties.css");
 	static final Resource logo = new Resource("logo.png");
 
+	static final String SET = "set";
+	static final String FIELD_SELECT = "fieldSelect";
+	static final String FIELD_VALUE_PREFIX = "fieldVal_";
+	static final String TEST_NUMBER = "testNum";
+
 	@Override
 	protected final void doRequest(
 			final HttpServletRequest request,
@@ -43,6 +53,51 @@ public abstract class PropertiesServlet extends CopsServlet
 		throws IOException
 	{
 		//System.out.println("request ---" + request.getMethod() + "---" + request.getContextPath() + "---" + request.getServletPath() + "---" + request.getPathInfo() + "---" + request.getQueryString() + "---");
+
+		if(Cop.isPost(request) && request.getParameter(SET)!=null)
+		{
+			if(this instanceof Overridable)
+			{
+				final HashMap<String, String> sourceMap = new HashMap<String, String>();
+				{
+					final String[] selects = request.getParameterValues(FIELD_SELECT);
+					if(selects!=null)
+						for(final String select : selects)
+							sourceMap.put(select, request.getParameter(FIELD_VALUE_PREFIX + select));
+				}
+				if(!sourceMap.isEmpty())
+				{
+					final Overridable overridable =(Overridable)this;
+					final Properties properties = overridable.newProperties(
+							new OverrideSource(getProperties().getSourceObject(), sourceMap));
+
+					int testNumber = -1;
+					final HashSet<Integer> doTestNumbers = new HashSet<Integer>();
+					final String[] doTestNumberStrings = request.getParameterValues(TEST_NUMBER);
+					if(doTestNumberStrings!=null)
+						for(final String doTestNumberString : doTestNumberStrings)
+							doTestNumbers.add(Integer.valueOf(Integer.parseInt(doTestNumberString)));
+					for(final Callable<?> test : properties.getTests())
+					{
+						testNumber++;
+
+						if(doTestNumbers.contains(Integer.valueOf(testNumber)))
+						{
+							try
+							{
+								test.call();
+							}
+							catch(final Exception e)
+							{
+								throw new RuntimeException(e);
+							}
+						}
+					}
+					overridable.override(properties);
+				}
+			}
+		}
+
 		final Properties properties = getProperties();
 
 		final Out out = new Out(request);
@@ -53,5 +108,44 @@ public abstract class PropertiesServlet extends CopsServlet
 		out.sendBody(response);
 	}
 
+	private static final class OverrideSource implements Properties.Source
+	{
+		private final Properties.Source template;
+		private final HashMap<String, String> override;
+		private final long timestamp = System.currentTimeMillis();
+
+		OverrideSource(
+				final Properties.Source sourceBefore,
+				final HashMap<String, String> sourceMap)
+		{
+			this.template = sourceBefore;
+			this.override = sourceMap;
+		}
+
+		public String get(final String key)
+		{
+			return
+				override.containsKey(key)
+				? override.get(key)
+				: template.get(key);
+		}
+
+		public String getDescription()
+		{
+			return template.getDescription() + " Edited " + new Date(timestamp) + ' ' + override.toString();
+		}
+
+		public Collection<String> keySet()
+		{
+			return null;
+		}
+	}
+
 	protected abstract Properties getProperties();
+
+	public interface Overridable
+	{
+		Properties newProperties(Properties.Source overrideSource);
+		void override(Properties properties);
+	}
 }
