@@ -7,6 +7,7 @@ omit bug fixes.
 The items are sorted inversely, i.e. lastest items are on top
 
 --------------------------------------------------------------------------
+* PropertiesServlet.Overridable
 * PropertiesServlet supports getTests
 * fix endless redirection loop in Cop#redirectToCanonical, if
 	addParameter(String, Cop) is used with parameters containing non-safe
